udmif/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: udmi-web
  labels:
    app.kubernetes.io/name: udmi-web
    app.kubernetes.io/instance: udmi-web
    app.kubernetes.io/version: "1.16.0"
  annotations:
    ingress.gcp.kubernetes.io/pre-shared-cert: udmi-ssl
    kubernetes.io/ingress.allow-http: "true"
    kubernetes.io/ingress.class: gce
    kubernetes.io/ingress.global-static-ip-name: udmi-global-address
    networking.gke.io/v1beta1.FrontendConfig: udmi-web
spec:
  rules:
    - host: "@HOST_NAME@"
      http:
        paths:
          - path: /api
            pathType: ImplementationSpecific
            backend:
              service:
                name: udmi-api
                port:
                  number: 4300
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: udmi-web
                port:
                  number: 80
